# oci-data-science-ai-samples

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CONTRIBUTING.md  Data-Flow-Modeling-Tuning.ipynb  LICENSE.TXT  LICENSE.txt  README.md  SECURITY.md  THIRD_PARTY_LICENSES.TXT  action.yaml  package.json  pyspark-mllib-data-flow.ipynb
.pre-commit-scripts/: check-copyright.py
LLM/: aqua-deploy-llm-byoc.md  deploy-aqua-llm-byoc.md  deploy-llama3.1.md  deploy-llm-byoc.md  deploy-openai-llm-byoc.md  llama3.1-8B-deployment-vLLM-container.md  readme.md
ads_notebooks/: README.md  __autonomous_database-pyspark.ipynb  __loading-data-from-various-storage-and-formats.ipynb  __use-ads-jobs-to-train-deploy-and-use-a-model.ipynb  big_data_service-(BDS)-kerberos.ipynb  big_data_service-(BDS)-livy.ipynb  caltech-pedestrian_detection-oracle_open_data.ipynb  data_catalog-hive_metastore-data_flow-2.ipynb  document-text_extraction.ipynb  make_readme.py  model_catalog.ipynb  model_deployment_fn.ipynb  natural_language_processing.ipynb  project.ipynb  pyspark-data_flow_studio-introduction.ipynb  pyspark-data_flow_studio-spark_nlp.ipynb  read-write-big_data_service-(BDS).ipynb  sql_magic-commands-with-autonomous_database.ipynb  streaming-service.ipynb  train-register-deploy-lightgbm.ipynb  (+4 more)
model-deployment/mcp-servers/stateful-python-example-server/: Dockerfile  README.md  inference.py  model-deplyment.py  pyproject.toml
model-deployment/mcp-servers/stateful-python-example-server/mcp_simple_streamablehttp/: __main__.py  event_store.py  server.py  test.py
(+1454 files in other folders)
